--- a/ping-coming-soon-page-master/ping-coming-soon-page-master/index.html
+++ b/ping-coming-soon-page-master/ping-coming-soon-page-master/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="path/to/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
-  <link rel="stylesheet" href="/ping-coming-soon-page-master/ping-coming-soon-page-master/css/main.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Ping coming soon page</title>
